vertical align fix

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -22,6 +22,7 @@
         height: 100%;
         vertical-align: middle;
         display: inline-block;
+        margin-left: -0.5em;
     }
 
     &__content {
